Refactor APIs